--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             android:value="@string/facebook_app_id"/>
 
         <activity
-            android:name=".FbLoginActivity"
+            android:name=".FbLoginPackage.FbLoginActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
