--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,11 @@
 
         </activity>
 
+        <activity android:name=".AboutUsAcitivity"/>
+        <activity android:name=".ContactUsActivity"/>
+        <activity android:name=".InviteFriendsActivity"/>
+        <activity android:name=".NotificationsActivity"/>
+
         <activity android:name="com.facebook.FacebookActivity"
             android:configChanges=
                 "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
