--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,8 @@
         <activity android:name=".ContactUsActivity"/>
         <activity android:name=".InviteFriendsActivity"/>
         <activity android:name=".NotificationsActivity"/>
+        <activity android:name=".StoryOne"/>
+        <activity android:name=".StoryTwo"/>
 
         <activity android:name="com.facebook.FacebookActivity"
             android:configChanges=
