--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,9 @@
         <activity android:name=".ContactUsActivity"/>
         <activity android:name=".InviteFriendsActivity"/>
         <activity android:name=".NotificationsActivity"/>
+        <activity
+            android:name=".PlacesActivity"
+            android:label="My Places"/>
         <activity android:name=".StoryOne"/>
         <activity android:name=".StoryTwo"/>
 
